--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -16,7 +16,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME}}
-        password: ${{ secrets.DOCKER_SECRET}}
+        password: ${{ secrets.DOCKER_PASSWORD}}
     
     - name: Set up docker build
       uses: docker/setup-buildx-action@v2
