--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -41,6 +41,6 @@ jobs:
         git config user.email "actions@github.com"
         git add .
         git commit -m "Update deployment server image tags to ${{ github.sha }}"
-        git push https://${PAT}@github.com/AryanBhatDev/argo-deployment.git main
+        git push https://${PAT}@github.com/AryanBhatDev/argo-deployment.git master
 
 
